--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,11 @@ memcached.standBy.host=vprocache02
 memcached.standBy.port=11211
 
 #RabbitMq Configuration
-rabbitmq.address=vpromq01
-rabbitmq.port=5672
-rabbitmq.username=guest
-rabbitmq.password=guest
+spring.rabbitmq.host=vpromq01
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.connection-timeout=10000
 
 #Elasticesearch Configuration
 elasticsearch.host =vprosearch01
