--- a/Docker-files/app/Dockerfile
+++ b/Docker-files/app/Dockerfile
@@ -2,8 +2,8 @@
 FROM openjdk:11 AS BUILD_IMAGE
 
 RUN apt update && apt install git maven -y
-RUN git clone https://github.com/devopshydclub/vprofile-project.git
-RUN cd vprofile-project && git checkout docker && mvn install
+RUN git clone https://github.com/Mexxy-lab/Docker-javaproject.git
+RUN cd vprofile-project && mvn install
 
 FROM tomcat:9-jre11
 
