--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,12 +12,12 @@ memcached.active.port=11211
 memcached.standBy.host=vprocache02
 memcached.standBy.port=11211
 
-#RabbitMq Configuration
-spring.rabbitmq.host=vpromq01
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-spring.rabbitmq.connection-timeout=10000
+#For Active Host
+rabbitmq.host=vpromq01
+rabbitmq.port=5672
+rabbitmq.username=guest
+rabbitmq.password=guest
+rabbitmq.connection-timeout=3000
 
 #Elasticesearch Configuration
 elasticsearch.host =vprosearch01
